WIP fix bad effect line overflow on mobile device

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,7 +18,7 @@
 @media screen and (min-width: 840px) {
 	.responsive-bar {
 		max-width: 1800px;
-		padding: 0 32px;
+		// padding: 0 32px;
 		margin: 0 auto;
 	}
 }
